and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

08 July 13: V.Ivanchenko (empolar-V10-00-02)
- G4PolarizedCompton - fixed initialisation, added sharing of
    process table between threads

08 July 13: V.Ivanchenko (empolar-V10-00-01)
- G4PolarizedCompton, G4PolarizedComptonModel - added startFromNull option
    as for standard Compton process and add the same low-energy 
    threshold to create secondary particle

26 May 13: V.Ivanchenko (empolar-V10-00-00)
- G4PolarizationMessenger - fixed coverity report on non-initialized members

21 November 13: V.Ivanchenko (empolar-V09-06-08)
- G4PolarizedPairProductionCrossSection, G4PolarizedBremsstrahlungCrossSection
    removed G4ThreadLocal

09 November 13: V.Ivanchenko (empolar-V09-06-07)
- G4eplusPolarizedAnnihilation - correct destruction

08 November 13: V.Ivanchenko (empolar-V09-06-06)
08 November 13: V.Ivanchenko (empolar-V09-06-05)
- G4ePolarizedIonisation, G4PolarizedCompton - correct destruction

30 October 13: V.Ivanchenko (empolar-V09-06-04)
28 October 13: V.Ivanchenko (empolar-V09-06-03)
28 October 13: V.Ivanchenko (empolar-V09-06-02)
28 October 13: V.Ivanchenko (empolar-V09-06-01)
- G4ePolarizedBremsstrahlungModel - substitute G4eBremsstrahlungModel 
    by G4SeltzerBergerModel

25 February 13: V.Ivanchenko (empolar-V09-06-00)
- G4PolarizedComptonCrossSection - removed unused class memebers:
     gammaPol0, electronPol1, epsilon

20 October 12: V.Ivanchenko (empolar-V09-05-02)
- G4PolarizedPhotoElectricEffect, G4PolarizedPEEffectModel - substitute 
    methods Model(), SetModel() by EmModel(), SetEmModel()

11 July 12: G.Cosmo (empolar-V09-05-01)
- Explicitly use inclusion of headers for system of units and physical