@@ -64,6 +64,7 @@
 #include "G4PhysicsTableHelper.hh"
 #include "G4KleinNishinaCompton.hh"
 #include "G4PolarizedComptonModel.hh"
+#include "G4EmParameters.hh"
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
 
@@ -102,13 +103,12 @@ void G4PolarizedCompton::InitialiseProcess(const G4ParticleDefinition*)
     if(0 == mType) {
       if(!EmModel(1)) { SetEmModel(new G4KleinNishinaCompton(), 1); }
     } else {
-      if(!EmModel(1)) { 
-        emModel = new G4PolarizedComptonModel();
-	SetEmModel(emModel, 1); 
-      }
+      emModel = new G4PolarizedComptonModel();
+      SetEmModel(emModel, 1); 
     }
-    EmModel(1)->SetLowEnergyLimit(MinKinEnergy());
-    EmModel(1)->SetHighEnergyLimit(MaxKinEnergy());
+    G4EmParameters* param = G4EmParameters::Instance();
+    EmModel(1)->SetLowEnergyLimit(param->MinKinEnergy());
+    EmModel(1)->SetHighEnergyLimit(param->MaxKinEnergy());
     AddEmModel(1, EmModel(1));
   } 
 }
